# zcf-src-jn5169-ed

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ubuntu-cmake.Dockerfile  z2m-converter.js
.devcontainer/: devcontainer.json
.devcontainer/scripts/: download_toolchain.sh
cmake/: JN5169.cmake  JennicSDK.cmake
docs/: WXKG06LM.md  WXKG07LM.md  WXKG11LM.md
firmwares/: CMakeLists.txt
firmwares/WXKG06LM/: README.md  app.zpscfg  buttons_definitions.h  device_config.c  device_zcl_options.h
firmwares/WXKG07LM/: README.md  app.zpscfg  buttons_definitions.h  device_config.c  device_zcl_options.h  leds_definitions.h
firmwares/WXKG11LM/: README.md  app.zpscfg  buttons_definitions.h  device_config.c  device_zcl_options.h  leds_definitions.h
firmwares/common/include/: ConfigurationCluster.h  app_basic_endpoint.h  app_battery.h  app_button_actions.h  app_buttons.h  app_events.h  app_init.h  app_led.h  app_main.h  app_node.h  app_on_off_endpoint.h  app_polling.h  app_reporting.h  app_resources.h  app_zcl_tick.h  bdb_options.h  device_config.h  isr_system.h  zcl_options.h
firmwares/common/src/: ConfigurationCluster.c  app_basic_endpoint.c  app_battery.c  app_buttons.c  app_events.c  app_init.c  app_led.c  app_main.c  app_node.c  app_on_off_endpoint.c  app_polling.c  app_reporting.c  app_resources.c  app_zcl_tick.c  isr_system.c
src/: ButtonMode.c  ButtonMode.h  CMakeLists.txt  ConfigurationCluster.c  ConfigurationCluster.h  app.zpscfg  app_basic_endpoint.c  app_basic_endpoint.h  app_battery.c  app_battery.h  app_button.c  app_button.h  app_buttons.c  app_buttons.h  app_common.h  app_device.h  app_entrypoint.c  app_entrypoint.h  app_events.c  app_events.h  app_led.c  app_led.h  app_main.c  app_main.h  app_node.c  app_node.h  app_on_off_endpoint.c  app_on_off_endpoint.h  app_polling.c  app_polling.h  app_reporting.c  bdb_options.h  main.c  zcl_options.h
toolchain/: CMakeToolchain.cmake
z2m_converters/: WXKG06LM_ALT.js  WXKG07LM_ALT.js  WXKG11LM_ALT.js
